--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -14,8 +14,16 @@
     border-left-color: transparent;
     border-right-color: transparent;
     outline-color: transparent;
-  }
+    width: 270px;
   
+
+  }
+  .logo{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   .loginParentDiv button {
     width: 100%;
     height: 48px;
@@ -23,11 +31,15 @@
     background-color: #002f34;
     color: whitesmoke;
     font-weight: 900;
+    outline: none;
+    border: none;
+    transition: 0.3s;
   }
   .loginParentDiv button:hover {
     background-color: white;
     color: #002f34;
     border: 2px solid #002f34;
+    border-radius: 2px;
   }
   
   .loginParentDiv a {
